2025-03-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eaproposf, find-eaproposv, find-eapropost):
	use better buffer names.
	(find-clprin1s, find-clprin1ind, ee-indent-as-elisp, ee-clprin1)
	(ee-clprin1s, ee-clprin1ind): new functions.

2025-02-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-wgeta-mode): fixed the order of the
	arguments in the call to `find-wget-mode'.

2025-01-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-aliases.el: Added `u0'.

2025-01-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eapropost): new function.

	* eev-elinks.el (find-etype-links): new function.

	* eev-blinks.el (find-dbsw-call): added a `switch-to-buffer'.
	(find-etypedescr): new function.

2025-01-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-clprin1): new function.

2025-01-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-shortaliasp, ee-shortalias-symbols)
	(ee-defalias-str-for, ee-find-eeshortaliases-body)
	(ee-find-eeshortaliases-header, find-eeshortaliases): new
	functions.
	(ee-find-eeshortdefs-header): mention `find-eeshortaliases'.

2024-12-31  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): new first-class
	video: "2024pianoroll".

2024-12-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): registered two new
	first-class videos: "2021sapt" and "2023visaud".

	* eev-plinks.el (ee-wget-downloading): new function.
	(find-wget0): use `ee-wget-downloading'.

2024-12-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-dot-emacs-eval, ee-dot-emacs-read): new
	functions.

2024-12-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): registered a new
	first-class video: "2023slogans".

2024-12-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (eek2, ee-eek2): new functions.

2024-12-10  Eduardo Ochs  <eduardoochs@gmail.com>
